--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -130,6 +130,53 @@ main {
   }
 }
 
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 9999;
+}
+
+.modal-content {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 25px;
+  background-color: #370f1b;
+  color: #ffe8b5;
+  width: 300px;
+  font-size: 1.5rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+  opacity: 0.9;
+  user-select: none;
+}
+
+.modal-close-btn {
+  margin-top: 20px;
+  font-size: 1.25rem;
+  padding: 10px;
+  color: white;
+  border-radius: 5px;
+  background-color: #ff5e00;
+  cursor: pointer;
+}
+
+.success-msg {
+  font-size: 1.5rem;
+  color: #fff;
+}
+
 #social-icons {
   text-align: center;
   margin-top: 30px;
@@ -166,6 +213,9 @@ main {
         margin-top: 10px;
       }
     }
+  }
+  .modal-content {
+    width: 70vw;
   }
   #social-icons {
     width: 100%;
